--- a/Kickbox/Kickbox/ClientApp/src/index.html
+++ b/Kickbox/Kickbox/ClientApp/src/index.html
@@ -7,6 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <script src="https://kit.fontawesome.com/5daa8eb347.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
